Save state support.